--- a/ECommerce.ProductsService/ProductsService.API/appsettings.json
+++ b/ECommerce.ProductsService/ProductsService.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Port=3306;Database=ecommerceproductsdatabase;UserID=root;Password=sa123;"
+    "MySqlConnection": "Server=$MYSQL_HOST;Port=3306;Database=ecommerceproductsdatabase;UserID=root;Password=$MYSQL_PASSWORD;"
   }
 }
