--- a/ECommerce.UsersService/ECommerce.API/appsettings.json
+++ b/ECommerce.UsersService/ECommerce.API/appsettings.json
@@ -7,6 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresConnection" : "Host=localhost; Port=5432; Database=eCommerceUsers; Username=postgres; Password=sa123"
+    "PostgresConnection": "Host=$POSTGRES_HOST; Port=5432; Database=eCommerceUsers; Username=postgres; Password=$POSTGRES_PASSWORD"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:9090"
+      }
+    }
   }
 }
