Synchronous Communication Between Products, Users and Orders Microservices

--- a/ECommerce.OrdersService/OrdersService.API/OrdersService.API.csproj
+++ b/ECommerce.OrdersService/OrdersService.API/OrdersService.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>7532a4b9-dffa-47e6-9e1a-affcc757a2c0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
