--- a/ECommerce.OrdersService/OrdersService.API/Dockerfile
+++ b/ECommerce.OrdersService/OrdersService.API/Dockerfile
@@ -29,4 +29,9 @@ WORKDIR /app
 COPY --from=publish /app/publish .
 ENV MONGODB_HOST=localhost
 ENV MONGODB_PORT=27017
+ENV MONGODB_DATABASE=OrdersDatabase
+ENV UsersMicroserviceName=localhost
+ENV UsersMicroservicePort=9090
+ENV ProductsMicroserviceName=localhost
+ENV ProductsMicroservicePort=8080
 ENTRYPOINT ["dotnet", "OrdersService.API.dll"]
