--- a/ECommerce.ProductsService/ProductsService.API/Properties/launchSettings.json
+++ b/ECommerce.ProductsService/ProductsService.API/Properties/launchSettings.json
@@ -4,20 +4,31 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MYSQL_HOST": "localhost",
+        "MYSQL_PASSWORD": "sa123",
+        "MYSQL_DATABASE": "ecommerceproductsdatabase",
+        "MYSQL_PORT": "3306",
+        "MYSQL_USER": "root"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5203"
+      "applicationUrl": "http://localhost:5203",
+      "launchUrl": "swagger"
     },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MYSQL_HOST": "localhost",
+        "MYSQL_PASSWORD": "sa123",
+        "MYSQL_DATABASE": "ecommerceproductsdatabase",
+        "MYSQL_PORT": "3306",
+        "MYSQL_USER": "root"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7149;http://localhost:5203",
-      "launchUrl": "https://localhost:7149/swagger/index.html"
+      "launchUrl": "swagger"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -32,7 +43,12 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "MYSQL_HOST": "localhost",
+        "MYSQL_PASSWORD": "sa123",
+        "MYSQL_DATABASE": "ecommerceproductsdatabase",
+        "MYSQL_PORT": "3306",
+        "MYSQL_USER": "root"
       },
       "publishAllPorts": true,
       "useSSL": true
