--- a/ECommerce.ProductsService/ProductsService.API/appsettings.json
+++ b/ECommerce.ProductsService/ProductsService.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "Server=$MYSQL_HOST;Port=3306;Database=ecommerceproductsdatabase;UserID=root;Password=$MYSQL_PASSWORD;"
+    "MySqlConnection": "Server=$MYSQL_HOST;Port=$MYSQL_PORT;Database=$MYSQL_DATABASE;UserID=$MYSQL_USER;Password=$MYSQL_PASSWORD;"
   }
 }
