--- a/ECommerce.OrdersService/docker-compose.yml
+++ b/ECommerce.OrdersService/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - UsersMicroservicePort=9090
       - ProductsMicroserviceName=products-microservice
       - ProductsMicroservicePort=8080
+      - REDIS_HOST=redis    # redis container name
+      - REDIS_PORT=6379 
     ports:
       - "7000:8080"
     networks:
@@ -91,6 +93,15 @@ services:
       - ../postgres-init:/docker-entrypoint-initdb.d
     networks:
       - users-postgres-network
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - ../redis-cache:/data
+    networks:
+      - ecommerce-network
 
 networks:
   orders-mongodb-network:
